--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "dependencies": {
     "unified": "^11.0.5",
-    "unist-util-is": "^6.0.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
@@ -39,7 +38,11 @@
     "@types/mdast": "^4.0.4",
     "@types/unist": "^3.0.3",
     "mdast-util-directive": "^3.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-directive": "^3.0.0",
     "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "remark-stringify": "^11.0.0",
     "type-coverage": "^2.29.7",
     "typescript": "^5.6.3"
   }
