--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,12 @@ jobs:
           bun-version: latest
       - name: Install Dependencies
         run: bun install --no-save
+      - name: Set up Node.js env
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: "https://registry.npmjs.org"
       - name: Publish
-        run: bun publish
+        run: npm publish --access public --tag ${{ env.RELEASE_TAG }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
