--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,11 @@ jobs:
           version: ${{ env.NEW_VERSION }}
           operation: release
 
+      - name: Git User Configuration
+        run: |
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
       - name: Git Commit for Preceding Changes (package.json & CHANGELOG.md) and Tag Creation
         run: |
           git add "package.json"
