--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "remark-card",
+  "version": "0.0.0",
   "description": "A remark plugin to parse card component(s)",
   "type": "module",
   "exports": "./dist/index.js",
