--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,9 @@ jobs:
       - name: Pre-Release Version Upgrade
         if: github.event.inputs.release-type == 'prerelease'
         run: |
-          echo NEW_VERSION=$(npm --no-git-tag-version --preid=beta version $RELEASE_TYPE) >> $GITHUB_ENV
+          newVersion="$(npm --no-git-tag-version --preid=beta version $RELEASE_TYPE)"
+          echo "New version: $newVersion"
+          echo "NEW_VERSION=$newVersion" >> $GITHUB_ENV
           echo "RELEASE_TAG=beta" >> $GITHUB_ENV
         env:
           RELEASE_TYPE: ${{ github.event.inputs.release-type }}
@@ -66,7 +68,9 @@ jobs:
       - name: Release Version Upgrade
         if: github.event.inputs.release-type != 'prerelease'
         run: |
-          echo NEW_VERSION=$(npm --no-git-tag-version version $RELEASE_TYPE) >> $GITHUB_ENV
+          newVersion="$(npm --no-git-tag-version version $RELEASE_TYPE)"
+          echo "New version: $newVersion"
+          echo "NEW_VERSION=$newVersion" >> $GITHUB_ENV
           echo "RELEASE_TAG=latest" >> $GITHUB_ENV
 
       - name: Changelog Update
