ci: 🎡 tweak the workflow for package release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,9 +58,11 @@ jobs:
       - name: Pre-Release Version Upgrade
         if: github.event.inputs.release-type == 'prerelease'
         run: |
-          newVersion="$(npm --no-git-tag-version --preid=beta version $RELEASE_TYPE)"
-          echo "New version: $newVersion"
-          echo "NEW_VERSION=$newVersion" >> $GITHUB_ENV
+          {
+            echo 'NEW_VERSION<<EOF'
+            npm --no-git-tag-version --preid=beta version $RELEASE_TYPE
+            echo EOF
+          } >> "$GITHUB_ENV"
           echo "RELEASE_TAG=beta" >> $GITHUB_ENV
         env:
           RELEASE_TYPE: ${{ github.event.inputs.release-type }}
@@ -68,9 +70,11 @@ jobs:
       - name: Release Version Upgrade
         if: github.event.inputs.release-type != 'prerelease'
         run: |
-          newVersion="$(npm --no-git-tag-version version $RELEASE_TYPE)"
-          echo "New version: $newVersion"
-          echo "NEW_VERSION=$newVersion" >> $GITHUB_ENV
+          {
+            echo 'NEW_VERSION<<EOF'
+            npm --no-git-tag-version version $RELEASE_TYPE
+            echo EOF
+          } >> "$GITHUB_ENV"
           echo "RELEASE_TAG=latest" >> $GITHUB_ENV
 
       - name: Changelog Update
